--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,9 +9,9 @@ services:
       POSTGRES_PASSWORD: odoo
       POSTGRES_DB: postgres
     tmpfs:
-      - /var/lib/postgresql/data  # Use RAM for faster tests
+      - /var/lib/postgresql/data # Use RAM for faster tests
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U odoo -d postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U odoo -d postgres" ]
       interval: 2s
       timeout: 2s
       retries: 10
@@ -27,11 +27,40 @@ services:
       - HOST=db
       - USER=odoo
       - PASSWORD=odoo
-    command: >
-      odoo
-      --database=test_db
-      --init=${MODULES:-my_module}
-      --test-enable
-      --stop-after-init
-      --no-http
-      --log-level=test
+    volumes:
+      - .:/mnt/extra-addons
+    command:
+      - /bin/bash
+      - -c
+      - |
+        # Script to find viable modules (those with __manifest__.py)
+        FIND_SCRIPT="import os; 
+        paths = ['/mnt/extra-addons']; 
+        modules = []; 
+        for p in paths: 
+            if os.path.exists(p): 
+                modules += [d for d in os.listdir(p) if os.path.isdir(os.path.join(p, d)) and os.path.exists(os.path.join(p, d, '__manifest__.py'))]
+        print(','.join(modules))"
+
+        MODULES_LIST=$$(python3 -c "$$FIND_SCRIPT")
+        echo "Detected modules: $$MODULES_LIST"
+
+        if [ -n "$$MODULES" ]; then
+          TARGET_MODULES="$$MODULES"
+        else
+          TARGET_MODULES="$$MODULES_LIST"
+        fi
+
+        # Odoo 19 test-tags format: standard is --test-tags /module_name
+        TAGS=""
+        IFS=',' read -ra ADDR <<< "$$TARGET_MODULES"
+        for i in "$${ADDR[@]}"; do
+            if [ -n "$$TAGS" ]; then TAGS="$$TAGS,"; fi
+            TAGS="$$TAGS/$$i"
+        done
+
+        echo "Running tests with tags: $$TAGS"
+
+        exec odoo --database=test_db --db_host=db --db_user=odoo --db_password=odoo \
+             --addons-path=/usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons \
+             --init="$$MODULES_LIST" --test-tags="$$TAGS" --stop-after-init --no-http --log-level=test
