chore: setup ci permissions to write

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ concurrency:
   group: odoo-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: write
+
 jobs:
   # ──────────────────────────────────────────────
   # Lint — Static Code Analysis with Ruff
