--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: odoo-test-logs
-          path: test-results.log
+          path: |
+            test-results.log
+            coverage.xml
           retention-days: 7
 
       - name: Update Coverage Badge
