--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,10 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
-          git diff --quiet && git diff --staged --quiet || (git commit -m "docs: update coverage badge to ${PERCENTAGE}% [skip ci]" && git push)
+          if ! git diff --cached --quiet; then
+            git commit -m "docs: update coverage badge to ${PERCENTAGE}% [skip ci]"
+            git push
+          fi
 
       - name: Teardown
         if: always()
