--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.organization=odoo-c3
 
 # Path to sources
 sonar.sources=.
-sonar.exclusions=**/tests/**, **/demo/**, **/static/lib/**
+sonar.exclusions=**/tests/**, **/demo/**, **/static/lib/**, **/__manifest__.py
 
 # Path to tests
 sonar.tests=.
